--- a/sudokuProject/.classpath
+++ b/sudokuProject/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/DEV FUNDAMENTALs/dev fundamentals/New folder/javacsv2.1.zip"/>
+	<classpathentry kind="lib" path="C:/Users/MiguelVega/Desktop/javacsv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
